hello-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:  
  name: hello-nodeport-service
spec:
  selector:    
    app: helloworld
  type: NodePort
  ports:  
  - name: http
    port: 5000
    targetPort: 5000
    nodePort: 30036
    protocol: TCP
